Docker: Extract Temurin JDK from Adoptium Linux installers (#77)
Adoptium provides [0] deb files like before AdoptOpenJDK.
They provide JDKs only, but jlink [1] saves us!

[0]: https://blog.adoptium.net/2021/12/eclipse-temurin-linux-installers-available/
[1]: https://docs.oracle.com/javase/9/tools/jlink.htm